--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bussapp",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.22",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.3"
+    "@expo/vector-icons": "^14.0.2",
+    "@types/react": "~18.3.12",
+    "dotenv": "^16.4.7",
+    "expo": "~52.0.20",
+    "expo-constants": "~17.0.4",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.15",
+    "expo-status-bar": "~2.0.0",
+    "firebase": "^11.2.0",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-maps": "1.18.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
+    "typescript": "~5.3.3",
+    "url-parse": "^1.5.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.73.0"
   },
   "private": true
 }
