--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@types/react": "~18.3.12",
     "dotenv": "^16.4.7",
     "expo": "~52.0.20",
