--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@types/react": "~18.3.12",
     "dotenv": "^16.4.7",
+    "eas-cli": "^15.0.11",
     "expo": "~52.0.20",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~17.0.4",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
