--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@types/react": "~18.3.12",
     "dotenv": "^16.4.7",
     "eas-cli": "^15.0.11",
     "expo": "~52.0.20",
     "expo-cli": "^6.3.10",
-    "expo-constants": "~17.0.4",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-status-bar": "~2.0.0",
+    "expo-constants": "~17.0.7",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
     "react-native-animatable": "^1.4.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-maps": "1.18.0",
