--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/react": "~18.3.12",
     "dotenv": "^16.4.7",
     "eas-cli": "^15.0.11",
-    "expo": "~52.0.20",
     "expo-cli": "^6.3.10",
     "expo-constants": "~17.0.7",
     "expo-linking": "~7.0.5",
@@ -36,7 +35,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react-native": "^0.73.0"
+    "@types/react-native": "^0.73.0",
+    "expo": "^52.0.37"
   },
   "private": true
 }
