--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,6 @@
 {
   "cli": {
-    "version": ">= 15.0.10",
+    "version": ">= 15.0.12",
     "appVersionSource": "remote",
     "requireCommit": true
   },
@@ -10,9 +10,10 @@
       "distribution": "internal"
     },
     "preview": {
+      "distribution": "internal",
       "android": {
-        "buildType": "apk"
-      }
+      "buildType": "apk"
+    }
     },
     "production": {
       "autoIncrement": true
