--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@types/react": "~18.3.12",
     "dotenv": "^16.4.7",
     "eas-cli": "^15.0.11",
+    "expo": "~52.0.37",
     "expo-cli": "^6.3.10",
     "expo-constants": "~17.0.7",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
-    "expo-status-bar": "~2.0.1",
+    "expo-status-bar": "^2.0.1",
     "firebase": "^11.2.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
@@ -27,12 +28,11 @@
     "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "typescript": "~5.3.3",
-    "url-parse": "^1.5.10",
-    "expo": "~52.0.37"
+    "url-parse": "^1.5.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
