--- a/eas.json
+++ b/eas.json
@@ -12,11 +12,27 @@
     "preview": {
       "distribution": "internal",
       "android": {
-      "buildType": "apk"
-    }
+        "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_API_KEY": "$EXPO_PUBLIC_API_KEY",
+        "EXPO_PUBLIC_AUTH_DOMAIN": "$EXPO_PUBLIC_AUTH_DOMAIN",
+        "EXPO_PUBLIC_PROJECT_ID": "$EXPO_PUBLIC_PROJECT_ID",
+        "EXPO_PUBLIC_STORAGE_BUCKET": "$EXPO_PUBLIC_STORAGE_BUCKET",
+        "EXPO_PUBLIC_MESSAGING_SENDER_ID": "$EXPO_PUBLIC_MESSAGING_SENDER_ID",
+        "EXPO_PUBLIC_APP_ID": "$EXPO_PUBLIC_APP_ID"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_API_KEY": "$EXPO_PUBLIC_API_KEY",
+        "EXPO_PUBLIC_AUTH_DOMAIN": "$EXPO_PUBLIC_AUTH_DOMAIN",
+        "EXPO_PUBLIC_PROJECT_ID": "$EXPO_PUBLIC_PROJECT_ID",
+        "EXPO_PUBLIC_STORAGE_BUCKET": "$EXPO_PUBLIC_STORAGE_BUCKET",
+        "EXPO_PUBLIC_MESSAGING_SENDER_ID": "$EXPO_PUBLIC_MESSAGING_SENDER_ID",
+        "EXPO_PUBLIC_APP_ID": "$EXPO_PUBLIC_APP_ID"
+      }
     }
   },
   "submit": {
