--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@types/react": "~18.3.12",
     "core-js": "^3.41.0",
     "dotenv": "^16.4.7",
