--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-cli": "^6.3.10",
     "expo-constants": "~17.0.7",
     "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.7",
     "expo-router": "~4.0.17",
     "expo-status-bar": "^2.0.1",
     "firebase": "^11.2.0",
