apk test final maps2

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
     <!-- Google Maps API Key -->
     <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="EXPO_PUBLIC_API_KEY_GM" />
+        android:value="@string/EXPO_PUBLIC_API_KEY_GM" />
     <activity android:name=".MainActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|uiMode" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:theme="@style/Theme.App.SplashScreen" android:exported="true" android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
